syntax = "proto3";

package com.reqreply.user;

option java_multiple_files = true;

import "com/example/ajax/user.proto";

message GetByIdUserRequest {
  string user_id = 1;
}

message GetByIdUserResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    example.ajax.User user = 1;
  }

  message Failure {
    string message = 100;
  }
}
